--- a/index.html
+++ b/index.html
@@ -8,6 +8,36 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <table>
+       
+         <tr>
+            <td>Laci</td>
+            <td>Peti</td>
+            <td>Kata</td>
+         </tr>
+         <tr>
+            <td>9832562</td>
+            <td>3825969</td>
+            <td>3287546</td>
+         </tr>
+        </table>
+    <table>
+        <tr>
+            <th>Név</th>
+            <th>Telefonszám</th>
+        </tr>
+        <tr>
+            <td>Laci</td>
+            <td>9832562</td>
+        </tr>
+        <tr>
+            <td>Peti</td>
+            <td>3825969</td>
+        </tr>
+        <tr>
+            <td>Kata</td>
+            <td>3287546</td>
+        </tr>
+    </table>
 </body>
 </html>
