--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <div class="grid">
+        <div class="header"></div>
+        <div class="main"></div>
+        <div class="aside"></div>
+        <div class="footer"></div>
+    </div>
 </body>
 </html>
