--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <div class="sticky"></div>
+    <div class="parent">
+        <div class="child"></div> 
+    </div>
 </body>
 </html>
